--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
         </activity>
         <activity
             android:name=".UserScreen"
-            android:label="@string/title_activity_test"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".GroupScreen"
+            android:label=""
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
