--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="QHIC2tKjRl2qG6DnqODp0zfdCqIdvIVacKB2anbI" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="J78bulEGe6tAHuYdNobTRlSZb3NDrcvFuOrho5Bc" />
+
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
@@ -28,19 +37,18 @@
         <activity
             android:name=".UserScreen"
             android:theme="@style/AppTheme.NoActionBar"/>
-
-        <meta-data
-            android:name="com.parse.APPLICATION_ID"
-            android:value="QHIC2tKjRl2qG6DnqODp0zfdCqIdvIVacKB2anbI" />
-        <meta-data
-            android:name="com.parse.CLIENT_KEY"
-            android:value="J78bulEGe6tAHuYdNobTRlSZb3NDrcvFuOrho5Bc" />
+        <activity
+            android:name=".TaskCreateActivity"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".GroupScreen"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".TaskDetails"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
