--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,3 +33,6 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
 }
+dependencies {
+    compile 'com.android.support:support-v4:23.+'
+}
