--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         <activity
             android:name=".UserScreen"
             android:theme="@style/AppTheme.NoActionBar"/>
-
+        <activity
+            android:name=".TaskCreateActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="QHIC2tKjRl2qG6DnqODp0zfdCqIdvIVacKB2anbI" />
@@ -40,7 +42,7 @@
         <activity
             android:name=".GroupScreen"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
