--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,23 +26,27 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".UserScreen"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".TaskCreateActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="QHIC2tKjRl2qG6DnqODp0zfdCqIdvIVacKB2anbI" />
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="J78bulEGe6tAHuYdNobTRlSZb3NDrcvFuOrho5Bc" />
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar">
+        android:label=""
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".GroupScreen"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
