Update 11-01-2016. SplashPage + fetching all data. Still need to verify last bit of code.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
             android:name=".TaskDetails"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".SplashPage"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
