--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -47,6 +48,7 @@
             android:name=".GroupScreen"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".GroupCreateActivity"></activity>
     </application>
 
 </manifest>
