Fixing merge problems and disappeared files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,12 @@
             android:name=".TaskDetails"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".SplashPage"
+        <activity
+            android:name=".SplashPage"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".SignUpActivity"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".SignUpActivity"
