--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,7 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,38 +35,17 @@
         </activity>
 
         <activity
-            android:name=".UserScreen"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".UserScreen" />
         <activity
-            android:name=".TaskCreateActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <meta-data
-            android:name="com.parse.APPLICATION_ID"
-            android:value="QHIC2tKjRl2qG6DnqODp0zfdCqIdvIVacKB2anbI" />
-        <meta-data
-            android:name="com.parse.CLIENT_KEY"
-            android:value="J78bulEGe6tAHuYdNobTRlSZb3NDrcvFuOrho5Bc" />
-        android:label=""
-        android:theme="@style/AppTheme.NoActionBar">
+            android:name=".TaskCreateActivity" />
         <activity
-            android:name=".GroupScreen"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".GroupScreen" />
         <activity
-            android:name=".TaskDetails"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".TaskDetails"/>
         <activity
-            android:name=".SplashPage"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".SplashPage"/>
         <activity
-            android:name=".SignUpActivity"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".SignUpActivity"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".SignUpActivity"/>
     </application>
 
 </manifest>
