--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -15,14 +16,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="QHIC2tKjRl2qG6DnqODp0zfdCqIdvIVacKB2anbI" />
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="J78bulEGe6tAHuYdNobTRlSZb3NDrcvFuOrho5Bc" />
-
 
         <activity
             android:name=".LoginActivity"
@@ -33,19 +32,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".UserScreen" />
-        <activity
-            android:name=".TaskCreateActivity" />
-        <activity
-            android:name=".GroupScreen" />
-        <activity
-            android:name=".TaskDetails"/>
-        <activity
-            android:name=".SplashPage"/>
-        <activity
-            android:name=".SignUpActivity"/>
+        <activity android:name=".UserScreen" />
+        <activity android:name=".TaskCreateActivity" />
+        <activity android:name=".GroupScreen" />
+        <activity android:name=".TaskDetails" />
+        <activity android:name=".SplashPage" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".GroupCreateActivity"/>
     </application>
 
 </manifest>
