--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,23 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <!--
+      IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
+      to match your app's package name + ".permission.C2D_MESSAGE".
+    -->
+    <permission android:protectionLevel="signature"
+        android:name="com.kb5012.timetable.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.kb5012.timetable.permission.C2D_MESSAGE" />
 
     <application
+        android:name=".TimeTable"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -34,18 +49,36 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".UserScreen" />
-        <activity
-            android:name=".TaskCreateActivity" />
-        <activity
-            android:name=".GroupScreen" />
-        <activity
-            android:name=".TaskDetails"/>
-        <activity
-            android:name=".SplashPage"/>
-        <activity
-            android:name=".SignUpActivity"/>
+        <activity android:name=".UserScreen" />
+        <activity android:name=".TaskCreateActivity" />
+        <activity android:name=".GroupScreen" />
+        <activity android:name=".TaskDetails" />
+        <activity android:name=".SplashPage" />
+        <activity android:name=".SignUpActivity" />
+
+        <service android:name="com.parse.PushService" />
+
+        <service android:name="com.parse.PushService" />
+        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE" />
+                <action android:name="com.parse.push.intent.DELETE" />
+                <action android:name="com.parse.push.intent.OPEN" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <!--
+                  IMPORTANT: Change "com.parse.starter" to match your app's package name.
+                -->
+                <category android:name="com.kb5012.timetable" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
