--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,13 +49,20 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".UserScreen" />
-        <activity android:name=".TaskCreateActivity" />
-        <activity android:name=".GroupScreen" />
-        <activity android:name=".TaskDetails" />
-        <activity android:name=".SplashPage" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".GroupCreateActivity"/>
+        <activity android:name=".UserScreen"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TaskCreateActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".GroupScreen"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TaskDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SplashPage"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SignUpActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".GroupCreateActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name="com.parse.PushService" />
 
